[package]
name = "tui"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.39"
color-eyre = "0.6.3"
crossbeam-channel = "0.5.14"
crossterm = {version = "0.28.1", features=["event-stream"] }
futures-util = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tui-input = "0.11.1"
tui-textarea = "0.7.0"
